# TimingCalibrationStudy

./: launch_script.sh  submit.py
Calibration/: useEvaluator.py
Calibration/configs/: eval_Mean_Sampled.yml  eval_Morphing_Sampled.yml  eval_save.yml
PlotScan/: data_helper.py  plotScan.py
PlotScan/configs/: efficiency.yml  hists.yml  scan.yml  scan_pythia_100events.yml
SiPhase2TimingCalibration/: README.md
SiPhase2TimingCalibration/plugins/: BuildFile.xml  Phase2TrackerBXHistogram.cc  Phase2TrackerBXHistogram.h
SiPhase2TimingCalibration/python/: Phase2TrackerBXHistogram_cfi.py  __init__.py
SiPhase2TimingCalibration/test/: PUCalibration_cfg.py  PythiaGunCalibration_cfg.py
configs/: calibration_test.yml  hists.yml  hists_1ns.yml  scan_PU.yml  scan_pythia.yml  submit_PU.yml  submit_Pythia.yml  submit_test.yml  test_mean.yml
timeCal/: setup.cfg  setup.py
timeCal/src/timeCal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
timeCal/src/timeCal/Calibration/: .evaluators.py.swp  .runCalibration.py.swp  evaluators.py  runCalibration.py  runEvaluator.py
timeCal/src/timeCal/PlotScan/: plotScan.py
timeCal/src/timeCal/utils/: BXRun.py  submit.py  yamlLoader.py
