[metadata]
name = timeCal
version = 0.0.1
author = Florian Bury
author_email = florian.bury@cern.ch
description = Package to perform timing calibration studies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FlorianBury/TimingCalibrationStudy
license = GPL-3.0-or-later 
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/FlorianBury/TimingCalibrationStudy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src 
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

